--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,105 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+/*Header*/
+.projects-header {
+    height: 300px;
+    width: 100%;
+    background-color: #0A22F4;
+    padding: 50px;
+}
+
+.projects-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 1440px;
+    width: 70%;
+}
+
+.projects-title h2 {
+    color: #ffffff;
+}
+
+.dot {
+    height: 10px;
+    width: 10px;
+    background-color: #ffffff;
+    opacity: 30%;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 5px;
+}
+
+.white-dot {
+    height: 10px;
+    width: 10px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 5px;
+
+}
+
+.projects img {
+    height: 310px;
+    width: 350px;
+
+}
+
+.projects-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 700px;
+    width: 70%;
+}
+
+.projects-others {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 50px;
+    max-width: 1440px;
+    width: 80%;
+}
+
+.projects-others a {
+    display: inline;
+    text-decoration: none;
+    color: #171717;
+    font-weight: bold;
+}
+
+.container {
+    position: relative;
+    margin-right: 25px;
+    margin-top: -100px;
+}
+
+.b {
+    margin-top: -200px
+}
+
+.absolute {
+    position: absolute;
+    left: 50%;
+    bottom: -30px;
+    transform: translate(-50%, -50%);
+    background-color: #ffffffb7;
+    border-radius: 5px;
+    width: 95%;
+    height: 100px;
+}
+
+.container p {
+    font-size: 18px;
+    color: #171717;
+    font-weight: bold;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
