--- a/css/style.css
+++ b/css/style.css
@@ -106,9 +106,9 @@
     align-items: center;
 }
 
-/*section*/
 
-h2{
+/*Section*/
+h2 {
     font-size: 32px;
     font-weight: bold;
     width: 226px;
@@ -116,102 +116,141 @@ h2{
     margin-left: 70px;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-.images{
+.images {
     display: grid;
     grid-gap: 35px;
     grid-template-columns: 159px 159px 159px;
     grid-template-rows: 62px 62px 62px;
 }
 
-p{
+p {
     font-size: 16px;
     text-align: left;
 }
 
-.dot{
+.dot2 {
+    height: 10px;
+    width: 10px;
+    background-color: #0A22F4;
+    opacity: 30%;
+    border-radius: 50%;
     display: inline-block;
+    margin: 5px;
+}
+
+.blue-dot {
+    height: 10px;
+    width: 10px;
     background-color: #0A22F4;
     border-radius: 50%;
-    width: 10px;
-    height: 10px;
-    margin: 10px;
+    display: inline-block;
+    margin: 5px;
 }
 
-.flex-box{
+.flex-box {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 1440px;
+    width: 80%;
 }
 
-.second-flex-box{
+.second-flex-box {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 1440px;
+    width: 80%;
     margin-top: 70px;
 }
 
-.text-div{
+.text-div {
     width: 450px;
     height: 100px;
+    margin-bottom: 100px;
 }
 
-.grey-dot{
+.grey-dot {
     background-color: gray;
 }
 
-.dots{
+.dots {
     margin-right: 70px;
 }
 
-section{
-    margin-top: 250px;
+section {
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
-.projects-footer{
+
+
+/*Footer*/
+.projects-footer {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    margin: 0 a;
     background-color: #0A22F4;
     height: 900px;
-    width: 100%;   
-    margin-top: 60px;
+    width: 100%;
+    padding: 30px;
+    padding: 100px;
 }
-.footer-title h2{
+
+.footer-title h2 {
     color: white;
-    margin-left: 80px;
-   
+
 }
+
 .text-footer {
     width: 450px;
     height: 100px;
     color: #ffffff;
-    margin-top: 200px;
+    margin-top: 70px;
     margin-left: 80px;
 }
-.Map{
+
+.Map {
     margin-top: 58px;
 }
+
+iframe {
+    border-radius: 5px;
+}
+
 .form-fields input,
-textarea{
+textarea {
     width: 463px;
     height: 60px;
     background-color: transparent;
     color: white;
     border: none;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     border-bottom: 1px solid white;
 }
-.textarea{
+
+.textarea {
     display: block;
     resize: none;
 }
-.forms{
-   margin-top: -280px;
+
+.forms {
+    margin-top: -280px;
     margin-left: 800px;
 
 }
-.number{
+
+.number {
     font-size: 22px;
 }
-.mail{
-    font-size: 22px;
-    margin-bottom: 80px;
+
+.footer-contact {
+    display: flex;
+    justify-content: center;
 }
